# kde-oauth2-plugin

./: .gitattributes  .gitignore  BUILD_SCRIPTS_GUIDE.md  CMakeLists.txt  COMPLETION_REPORT.md  DOCUMENTATION_SUMMARY.md  Makefile  OAUTH2_INTEGRATION_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  build_compatible.sh  build_deb.sh  build_universal.sh  check_compatibility.sh  final_demo.sh  get_oauth_token.sh  gzweibo-oauth2-email.service  gzweibo-oauth2-profile.service  gzweibo-oauth2.provider  gzweibo-oauth2.service  honest_test.py  install_build_deps.sh  oauth2_api_demo.sh  oauth2_config.env  oauth2_credentials.py  oauth2_test.cpp  oauth2_test.moc  quick_build.sh  quick_oauth2_test.py  readme.md  uninstall.sh
csharp-oauth2-client/: KDEOAuth2Client.csproj  KDEOAuth2Manager.cs  OAuth2ApiClient.cs  Program.cs  README.md  TokenManager.cs  TokenManagerExample.cs  create_test_data.sh  quick_test.sh  test.sh
practical/: Models.cs  MyProject.csproj  Program.cs
practical/Services/: KDEOAuth2Manager.cs  OAuth2ApiClient.cs
src/: kdeoauth2plugin.cpp  kdeoauth2plugin.h  kdeoauth2plugin.json
